--- a/counter/templates/counter/counter_home.html
+++ b/counter/templates/counter/counter_home.html
@@ -1,5 +1,6 @@
 <html>
 <body>
     <p>Hi there! You are visitor # {{ visits }}!</p>
+    <p>My scheduled task ran {{ runtimes }} Times</p>
 </body>
 </html>
